--- a/ola_mundo/pubspec.yaml
+++ b/ola_mundo/pubspec.yaml
@@ -23,11 +23,17 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+    
+    
+
+  
 
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.2
+  cupertino_icons: ^1.0.3
+  flutter_linkify: ^5.0.2
+  url_launcher: ^5.4.0
 
 dev_dependencies:
   flutter_test:
